[package]
name = "chronos-program"
version = "0.0.1"
description = "Created with Anchor"
edition = "2018"
license = "ISC"
homepage = "https://github.com/chronos-so/chronos/tree/main/programs/chronos"
repository = "https://github.com/chronos-so/chronos"
documentation = "https://chronos.so"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronos_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
chronos-indexer = { version = "0.0.1", features = ["cpi"] }
solana-program = "1.7.12"
