[package]
name = "cronos-program"
version = "0.0.10"
description = "Created with Anchor"
edition = "2018"
license = "ISC"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://docs.cronos.so"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
solana-program = "1.7.12"
