[package]
name = "cronos-program"
version = "0.0.24"
description = "Instruction scheduler for Solana"
edition = "2018"
license = "Apache-2.0"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana", "cronos", "program"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
solana-program = "1.7.12"
