[package]
name = "cronos-program"
version = "0.1.7"
description = "Decentralized task scheduler for Solana"
edition = "2021"
license = "Apache-2.0"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana", "cronos", "program"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
solana-program = "1.9.9"
