[package]
name = "clockwork-epoch-program"
version = "1.1.4"
description = "Clockwork epoch protocol"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_epoch_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { features = ["mint", "token"], version = "0.25.0" }
clockwork-network-program = { path = "../network", features = ["cpi"], version = "1.1.4" }
clockwork-queue-program = { path = "../queue", features = ["cpi"], version = "1.1.4" }
