[package]
name = "cronos-health"
version = "0.2.0"
description = "Cronos health protocol"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_health"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
