[package]
name = "cronos-heartbeat"
version = "0.1.8"
description = "A timer to track the liveness of a Cronos cluster"
edition = "2021"
license = "Apache-2.0"
homepage = "https://cronos.so"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://docs.cronos.so"
readme = "./README.md"
keywords = ["solana", "cronos", "program"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_heartbeat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/cronos-so/anchor", branch = "v0.24.2+solana.1.10.8" }
