[package]
name = "chronos-indexer"
version = "0.0.1"
description = "Create an on-chain list of accounts"
edition = "2018"
license = "ISC"
homepage = "https://github.com/chronos-so/chronos/tree/main/programs/indexer"
repository = "https://github.com/chronos-so/chronos"
documentation = "https://chronos.so"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "chronos_indexer"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
