[package]
name = "cronos-indexer"
version = "0.0.1"
description = "Create an on-chain list of accounts"
edition = "2018"
license = "ISC"
homepage = "https://github.com/cronos-so/cronos/tree/main/programs/indexer"
repository = "https://github.com/cronos-so/cronos"
documentation = "https://cronos.so"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "cronos_indexer"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
