[package]
name = "clockwork-network-program"
version = "1.1.0"
description = "Clockwork networking protocol"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { features = ["mint", "token"], version = "0.25.0" }
clockwork-pool-program = { path = "../pool", features = ["cpi"], version = "1.0.6" }
clockwork-queue-program = { path = "../queue", features = ["cpi"], version = "1.0.6" }
