[package]
name = "clockwork-network-program"
repository = "https://github.com/clockwork-xyz/programs/network"
description = "Clockwork networking protocol"
readme = "./README.md"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["mint", "token"]}
clockwork-utils = { workspace = true }
