[package]
name = "clockwork-network-program"
version = "2.0.19"
description = "Clockwork networking protocol"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { features = ["mint", "token"], version = "0.28.0" }
clockwork-utils = { path = "../../utils", version = "=2.0.19" }
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
